--- a/home/welcome.htm
+++ b/home/welcome.htm
@@ -1,19 +1,12 @@
-	
 <ul>
 	<li>Looking for some adrenaline? No need to go farther</li>
-    <li>HuaHCoding es la primera plataforma de concursos de programaci&oacute;n creada para la comunidad peruana. Alumnos de la Universidad Nacional Jos&eacute; Faustino
-	S&aacute;nchez Carri&oacute;n, U.N.M.S.M. y las dem&aacute;s Universidades e Institutos de la localidad est&aacute;n
-	invitados a competir en una plataforma donde podr&aacute;s entretenerte, 
-	divertirte, aprender, demostrar, competir, adem&aacute;s de participar en los foros 
-	de una comunidad ambrienta de código.
+    <li>HuaHCoding es una plataforma de concursos de programaci&oacute;n de algoritmos creada para la comunidad peruana. 
+	&Uacute;nete y podr&aacute;s entretenerte, aprender, demostrar, competir, and why not? show off a little.
     </li>
 </ul>
 <ul>
-    <li>Visite constantemente la p&aacute;gina para ver los concursos que se programan cada 15 días aproximadamente.
-	En la secci&oacute;n <i>
-	Reglas</i> podr&aacute;n ver todo sobre el sistema de competici&oacute;n. Para competir 
-	tienen que <a href="http://huahcoding.co.cc/registration.php">
-	registrarse</a> en el HuaHCoding y posteriormente para participar en cada 
-	concurso tienen que registrarse en la secci&oacute;n de <i>Concursos Activos</i>. <br>
+    <li>Visite la secci&oacute;n de pr&aacute;ctica que esta llena de problemas de concursos pasados con los cuales te puede entretener por un buen rato. Enjoy! 
+    Para competir o practicar 
+	tienes que <a href="http://huahcoding.com/registration.php">
+	registrarse</a> en HuaHCoding o usar tu cuenta de Facebook.<br>
 </ul>
-
